--- a/semana3/css/eq.css
+++ b/semana3/css/eq.css
@@ -1,65 +1,66 @@
-body{
-    background-color: hsl(225, 38%, 18%); 
-    font-family: "Fredoka";
+body {
+  background-color: hsl(225, 38%, 18%);
+  font-family: "Fredoka";
   font-size: 18px;
-color: white;
-
-}
-
-.contenedor {
-   height: 100vh;
-   display: flex;
-   
-   justify-content: center;
-}
-
-    
-
-
-.h1{
-    height: 10vh;
-    /* border: solid black; */
-    display: flex;
- 
-}
-
-
-img {
-    height: 100px;
-    border-radius: 50%;
-}
-.barra2{
-    display: flex;
-}
-.barra2{
-    justify-content: space-around;
-}
-.barra3{
-    display: flex;
-    background-color: #22326b;
-    border-radius: 6px;
-}
-.barra3 {
-    justify-content: space-around;
-}
-
-.buscar {
-    width: 500px;
-    height:20px ;
-    border-radius: 6px;
-}
-.boton{
-    width: 150px;
-    height: 24px;
-    border-radius: 6px;
-    background-color: #0d6efd;
   color: white;
 }
 
-.inter{
-    height: 7px;
-    }
-    
-    .inter2{
-        height: 7px;
-    }
+.contenedor {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+.h1 {
+  height: 10vh;
+  /* border: solid black; */
+  display: flex;
+}
+
+img {
+  height: 100px;
+  border-radius: 50%;
+}
+.barra2 {
+  display: flex;
+  justify-content: space-around;
+  border: solid 5px ;
+}
+
+.barra3 {
+
+  display: flex;
+  padding: 15px;
+  background-color: #22326b;
+  border-radius: 6px;
+  justify-content: space-around;
+  
+}
+
+.buscar {
+  width: 500px;
+  height: 20px;
+  border-radius: 6px;
+  border: solid 5px ;
+
+}
+
+.boton {
+  width: 150px;
+  height: 27px;
+  border-radius: 6px;
+  background-color: #0d6efd;
+  color: white;
+  
+}
+
+.contenedor * {
+    margin: 6px;
+}
+/* .inter {
+  height: 7px;
+}
+
+.inter2 {
+  height: 7px;
+} */
