--- a/semana3/css/index.css
+++ b/semana3/css/index.css
@@ -1,99 +1,182 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: "Open Sans", sans-serif;
-  }
-  
-  .title {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 24px;
-    color: #374151;
-    margin-bottom: 5px;
-  }
-  
-  hr {
-    width: 100px;
-    height: 2px;
-    background-color: #374151;
-    border-radius: 4px;
-    border: none;
-  }
-  
-  .container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-  
-  .container div {
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 20px;
-    margin: 20px;
-    height: 506px;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-  }
-  
-  .small-child {
-    width: 20%;
-  }
-  
-  .big-child {
-    width: 60%;
-  }
-  
-  .big-child h2 {
-    width: 60%;
-    margin: auto;
-  }
-  
-  .child-one {
-    background: url("../images/zapatos.svg");
-  }
-  
-  .child-two {
-    background: url("../images/reloj.svg");
-  }
-  
-  .child-three {
-    background: url("../images/ropa.svg");
-  }
-  
-  .child-four {
-    background: url("../images/bolso.svg");
-  }
-  
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", sans-serif;
+}
+
+.title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 24px;
+  color: #374151;
+  margin-bottom: 5px;
+}
+
+hr {
+  width: 100px;
+  height: 2px;
+  background-color: #374151;
+  border-radius: 4px;
+  border: none;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.container div {
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 20px;
+  margin: 20px;
+  height: 506px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
+.small-child {
+  width: 20%;
+}
+
+.big-child {
+  width: 60%;
+}
+
+.big-child h2 {
+  width: 60%;
+  margin: auto;
+}
+
+.child-one {
+  background: url("../images/zapatos.svg");
+}
+
+.child-two {
+  background: url("../images/reloj.svg");
+}
+
+.child-three {
+  background: url("../images/ropa.svg");
+}
+
+.child-four {
+  background: url("../images/bolso.svg");
+}
+
+h2 {
+  color: #fff;
+  font-size: 56px;
+  text-align: center;
+}
+
+section {
+  background-color: rgba(0, 0, 0, 0.3);
+  border: solid 1px rgba(249, 250, 251, 0.5);
+  color: #fff;
+  max-width: 291px;
+  text-align: left;
+}
+
+section * {
+  margin-left: 10px;
+}
+
+section h5:first-child {
+  font-size: 18px;
+  margin-bottom: 0;
+}
+
+section h5:last-child {
+  font-size: 14px;
+}
+
+section p {
+  font-size: 12px;
+  font-weight: 100;
+}
+.title2 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 24px;
+  color: #374151;
+  margin-bottom: 5px;
+}
+
+.i1 {
+  background: url("../images/casanegra.svg");
+}
+
+.i2 {
+  background: url("../images/polo-rojo.svg");
+}
+
+.i3 {
+  background: url("../images/gorra-negra.svg");
+}
+
+.i4 {
+  background: url("../images/polo-bicolor.svg");
+}
+
+.container2 {
+  display: flex;
+  justify-content: space-around;  
+}
+
+.container2 div {
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 20px;
+  margin: 20px;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+}
+
+.hr2 {
+  width: 100px;
+  height: 2px;
+  background-color: #374151;
+  border-radius: 4px;
+  border: none;
+}
+.container2 .sec {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #fff;
+  max-width: 291px;
+  text-align: left;
+}
+
+@media only screen and (max-width: 1200px) {
+  /* body {
+    background-color: green;
+  } */
+
   h2 {
-    color: #fff;
-    font-size: 56px;
-    text-align: center;
+    font-size: 32px;
   }
-  
-  section {
-    background-color: rgba(0, 0, 0, 0.3);
-    border: solid 1px rgba(249, 250, 251, 0.5);
-    color: #fff;
-    max-width: 291px;
-    text-align: left;
+}
+/*TABLE NORMAL 11*/
+@media only screen and (max-width: 800px) {
+  /* body {
+    background-color: red;
+  } */
+  .big-child {
+    width: 35%;
   }
-  
-  section * {
-    margin-left: 10px;
+  .small-child {
+    width: 35%;
   }
-  
-  section h5:first-child {
-    font-size: 18px;
-    margin-bottom: 0;
+}
+/*mobile 5 -6*/
+@media only screen and (max-width: 530px) {
+  .small-child {
+    width: 100%;
   }
-  
-  section h5:last-child {
-    font-size: 14px;
+  .big-child {
+    width: 100%;
   }
-  
-  section p {
-    font-size: 12px;
-    font-weight: 100;
-  }
+}
