--- a/semana3/css/menu.css
+++ b/semana3/css/menu.css
@@ -181,14 +181,17 @@ main {
   font-weight: bolder;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  font-size: var(--texto-grande);
 }
 .tr {
-  background-color: #eee;
-  border-bottom: 1px dashed;
+  background-color: var(--primer-color);
+  border-bottom: 1px #666 dashed;
+  font-size: var(--texto-mediano);
 }
 
 .tr:nth-child(even) {
-  background-color: white;
+  background-color: var(--segundo-color);
+  font-size: var(--texto-pequeno);
 }
 .tr:last-child {
   border-bottom: 1px #666 solid;
