--- a/PRUEBASMEDIDA/PRUEBA.css
+++ b/PRUEBASMEDIDA/PRUEBA.css
@@ -25,17 +25,18 @@ body {
   width: 300px;
   height: 300px;
   background-color: blue;
-  position: relative;
-  /* margin-left: auto; */
+  flex-direction: column;
+ display: flex;
+ align-items: center;
+ /* justify-content: end; */
+ 
 }
 .hijo {
+  
   width: 100px;
   height: 100px;
   background-color: black;
-  position: absolute;
-  /* right: 0; */
-  left: calc(50% - 50px);
-  top: calc(50% - 50px);
+
 }
 /*con esto ocupa todo el ancho*/
 
