--- a/semana3/css/var.css
+++ b/semana3/css/var.css
@@ -1,14 +1,14 @@
 :root {
     /* CASE SENSITIVE: sensible a mayus y minus. */
     /* variables de color: */
-    --primer-color: red;
+    --primer-color: rgb(153, 152, 152);
     --primer-Color: blue;
-    --segundo-color: #abc123;
+    --segundo-color: #f1f1ec;
     --tercer-color: rgba(100, 200, 123, 0.5);
 
     /* variables de tamano */
     --texto-pequeno: 1rem;
-    --texto-mediano: 1.4rem;
+    --texto-mediano: 1rem;
     --texto-grande: 1.6rem;
     --texto-supergrande: 30px;
     --texto-diminuto: 0.05em;
